--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -585,7 +585,7 @@ table .btn-danger:hover {
 }
 
 /* Champs */
-#addForm form div {
+#addForm form {
     margin-bottom: 12px;
     display: flex;
     flex-direction: column;
